--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1394,7 +1394,7 @@ $\vn{f}(\vn{key}, \vn{input1}, \dots, \vn{input}N):\vn{output}$ is the PRF.
    The public keys (bitstrings) are mapped to elements of $\F_p$ by the function 
    $\red$ and conversely, elements of $\F_p$ are mapped to public keys by
    the function $\repr$, such that $\red \circ \repr$ is the identity.
-   The Diffie-Hellman "exponentiation" is defined by 
+   The Diffie-Hellman ``exponentiation'' is defined by 
       \[\exp(X,y) = \repr((\red(X))^y)\]
    The secret keys are chosen uniformly in $\{ kn \mid n \in [n_{min},n_{max}] \}$
    where $n_{min} < n_{max}$, $n_{max} - n_{min} < q$ and $n_{max} - n_{min} < q'$.
