--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 This file summarizes the most important changes between versions
 of the cryptographic protocol verifier.
 
+Version
+
+- Removed a collision from DH_proba_collision and square_DH_proba_collision
+  because it may not hold in case there are weak private keys.
+
 Version 2.01pl1
 
 - Revised models for elliptic curve Diffie-Hellman: removed
