fixed query in transf_insert_event.ml; fixed spurious display of occurrences after instruction that uses occurrence designators; progress on TLS 1.3 PSKDHE with corrupted PSK

--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+instruct.ml, command CFocus:
+Syntax.check_query may stop in case of error by calling
+input_error. That's not suitable in interactive mode,
+it should raise Error(..,..) instead of calling input_error.
+
 Improve FindCompos to exploit collisions (with non-zero probability)
 in order to prove injectivity.
 Currently, find_compos_bin works as follows:
