--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2396,7 +2396,7 @@ By default, \texttt{collision} statements can always be applied.
 
 \item $\texttt{undo}\ n$: undo the last $n$ transformations.
 
-\item $\texttt{undo\ focus}$: go back to the state before the last focus command.
+\item $\texttt{undo\ focus}$: go back to the state before the last \texttt{focus} command.
   
 \item \texttt{restart}: restart the proof from the beginning.
 (Still simplify automatically the first game.)
