--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2384,7 +2384,7 @@ By default, \texttt{collision} statements can always be applied.
   tell CryptoVerif to try to prove only the mentioned queries, ignoring all other queries.
   That sometimes allows to simplify the game further (e.g. remove events that are not used in the queries on which we focus),
   and may allow to prove the mentioned queries.
-  The queries are considered equal modulo renaming of variables declared in $\seq{vartypeb}$.
+  The queries are considered equal modulo renaming of variables declared in $\seq{vartypeb}$. When there is no ambiguity, the public variables of the queries can be omitted.
   When the queries on which we focus are all proved,
   CryptoVerif goes back to the state before the last \texttt{focus} command, to try
   to prove the other queries.
