raise Error instead of using input_error in Syntax.check_query

--- a/TODO
+++ b/TODO
@@ -1,8 +1,3 @@
-instruct.ml, command CFocus:
-Syntax.check_query may stop in case of error by calling
-input_error. That's not suitable in interactive mode,
-it should raise Error(..,..) instead of calling input_error.
-
 Improve FindCompos to exploit collisions (with non-zero probability)
 in order to prove injectivity.
 Currently, find_compos_bin works as follows:
@@ -3586,3 +3581,9 @@ DONE 7/12/2018
    (In doing that, remember that the proof of an event may depend
    itself on other events...)
 DONE 28/1/2019
+
+instruct.ml, command CFocus:
+Syntax.check_query may stop in case of error by calling
+input_error. That's not suitable in interactive mode,
+it should raise Error(..,..) instead of calling input_error.
+FIXED 30/7/2019
