--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1376,6 +1376,7 @@ $\vn{f}(\vn{key}, \vn{input1}, \dots, \vn{input}N):\vn{output}$ is the PRF.
 \newcommand{\red}{\mathrm{red}}%
 \newcommand{\repr}{\mathrm{repr}}%
 \newcommand{\modop}{\mathbin{\mathrm{mod}}}%
+\newcommand{\mul}[2]{{#1}\cdot{#2}}
 
      \item $\texttt{expand\ DH\_single\_coord\_ladder}(G$, $Z$, $g$, $\vn{exp}$, $\vn{mult}$, $\vn{subG}$, $\vn{Znw}$, $\vn{ZnwtoZ}$, $\vn{g\_k}$, $\vn{exp\_div\_k}$, $\vn{exp\_div\_k}'$, $\vn{pow\_k}$, $\vn{subGtoG}$, $\vn{zero}$, $\vn{sub\_zero}\texttt{).}$ models an elliptic curve defined by the equation
    $Y^2 = X^3 + A X^2 + X$ in the field $\F_p$ of non-zero integers modulo the 
@@ -1389,14 +1390,14 @@ $\vn{f}(\vn{key}, \vn{input1}, \dots, \vn{input}N):\vn{output}$ is the PRF.
    consider the elliptic curve $E(\F_{p^2})$ defined by the equation $Y^2 =
    X^3 + A X^2 + X$ in a quadratic extension $\F_{p^2}$ of $\F_p$, we define 
    $X_0 : E(\F_{p^2}) \rightarrow \F_{p^2}$ by $X_0(\infty) = 0$ and $X_0(X,Y) = X$, and 
-   for $X \in \F_p$ and $y$ an integer, we define $X^y \in \F_p$ as $X^y = X_0(yQ)$
+   for $X \in \F_p$ and $y$ an integer, we define $\mul{y}{X} \in \F_p$ as $\mul{y}{X} = X_0(yQ)$
    for all $Q \in E(\F_{p^2})$ such that $X_0(Q) = X$.
    The value $g = X_0(g_0)$ represents the base point $g_0$, which must have order $q$.
    The public keys (bitstrings) are mapped to elements of $\F_p$ by the function 
    $\red$ and conversely, elements of $\F_p$ are mapped to public keys by
    the function $\repr$, such that $\red \circ \repr$ is the identity.
    The Diffie-Hellman ``exponentiation'' is defined by 
-      \[\exp(X,y) = \repr((\red(X))^y)\]
+      \[\exp(X,y) = \repr(\mul{y}{\red(X)})\]
    The secret keys are chosen uniformly in $\{ kn \mid n \in [n_{min},n_{max}] \}$
    where $n_{min} < n_{max}$, $n_{max} - n_{min} < q$ and $n_{max} - n_{min} < q'$.
    Therefore the set of secret keys may contain a multiple of $q$ (resp. $q'$).
@@ -1410,7 +1411,13 @@ This model is justified in~\cite{LippBlanchetBharagavanInria19}.
 
        $G$: type of public keys (must be \texttt{bounded} and \texttt{large}).
 
-       $\vn{subG}$: type of $\{ X^k \mid X \in F_p \}$  (must be \texttt{bounded} and \texttt{large}). 
+       $\vn{subG}$: type of $\{ \mul{k}{X} \mid X \in F_p \}$  (must be \texttt{bounded}, \texttt{nonuniform}, and \texttt{large}). 
+     Random choices in $\vn{subG}$ are done by choosing uniformly in 
+     $\{ \mul{x}{g} \mid x \in \{ 1, \dots, q-1 \} \}$. (This set is not the whole $\vn{subG}$,
+     since $\vn{subG}$ also contains elements of the twist.)
+     This is important when the DDH assumption or the square DDH assumption
+     is used.
+       
 
        $Z$, $\vn{Znw}$: type of exponents (must be \texttt{bounded}, \texttt{nonuniform}, and \texttt{large}). 
    $\vn{Znw}$ is the set of integers multiple of $k$, prime to $qq'$ modulo $kqq'$, that is, exponents without weak keys.
@@ -1428,14 +1435,14 @@ This model is justified in~\cite{LippBlanchetBharagavanInria19}.
        $\vn{mult}(\vn{Znw}, \vn{Znw}): \vn{Znw}$: the multiplication function for exponents, defined as
        $\vn{mult}(x,y) = x.y \mod kqq'$. (It remains in $\vn{Znw}$.)
 
-       $\vn{g\_k} = \red(g)^k$. It is an element of $\vn{subG}$.
+       $\vn{g\_k} = \mul{k}{\red(g)}$. It is an element of $\vn{subG}$.
 
-       $\vn{exp\_div\_k}(\vn{subG},\vn{Znw}): \vn{subG}$ is defined by $\vn{exp\_div\_k}(X,y) = X^{y/k}$.
+       $\vn{exp\_div\_k}(\vn{subG},\vn{Znw}): \vn{subG}$ is defined by $\vn{exp\_div\_k}(X,y) = \mul{(y/k)}{X}$.
 
        $\vn{exp\_div\_k}'$: symbol that replaces $\vn{exp\_div\_k}$ after game transformation,
        with the same definition as $\vn{exp\_div\_k}$.
 
-       $\vn{pow\_k}(G):\vn{subG}$, defined by $\vn{pow\_k}(x) = \red(x)^k$.
+       $\vn{pow\_k}(G):\vn{subG}$, defined by $\vn{pow\_k}(x) = \mul{k}{\red(x)}$.
 
        $\vn{subGtoG}(\vn{subG}):G$ is $\repr$ restricted to $\vn{subG}$.
 
