added commands 'tag t' and 'undo t'

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ of the cryptographic protocol verifier.
 
 Version
 
+- Added commands "tag t" and "undo t".
 - Removed a collision from DH_proba_collision and square_DH_proba_collision
   because it may not hold in case there are weak private keys.
 
