--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -1246,6 +1246,13 @@ Similar to \texttt{elsefindFactsInReplace}, but applies in
 Similar to \texttt{elsefindFactsInReplace}, but applies in
 \texttt{success} operations. 
 
+\item \texttt{set elsefindFactsInSuccessSimplify = true.}\\
+\texttt{set elsefindFactsInSuccessSimplify = false.}
+
+Similar to \texttt{elsefindFactsInReplace}, but applies in
+the elimination of useless code in \texttt{success simplify} operations. 
+
+
 \item \texttt{set elsefindAdditionalDisjunct = true.}\\
 \texttt{set elsefindAdditionalDisjunct = false.}
 
